@@ -28,6 +28,10 @@
    - djm@cvs.openbsd.org 2013/04/05 00:14:00
      [auth2-gss.c krl.c sshconnect2.c]
      hush some {unused, printf type} warnings
+   - djm@cvs.openbsd.org 2013/04/05 00:31:49
+     [pathnames.h]
+     use the existing _PATH_SSH_USER_RC define to construct the other
+     pathnames; bz#2077, ok dtucker@ (no binary change)
 
 20130418
  - (djm) [config.guess config.sub] Update to last versions before they switch
